--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=password
 spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=/home/vkoziachiy/Projects/sweater/uploads
