--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <scope>runtime</scope>
         </dependency>
 
+
+        <!-- migrate -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
         <!-- security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
